--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </header>
         <main>
             <section>
-                <p>Choose a game mode</p>
+                <p><em>Choose a game mode, and play</em></p>
                 <div id="content_type">
-                    <label for="word">Words</label>
+                    <label for="word"><u>Words</u></label>
                     <input type="radio" id="word" name="content_type" />
-                    <label for="phrase">Phrases</label>
+                    <label for="phrase"><u>Phrases</u></label>
                     <input type="radio" id="phrase" name="content_type" />
                     <label for="content">Context</label>
                     <select name="content" id="content">
