--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
                     <select name="content" id="content">
                         <option value="default">Not chosen</option>
                     </select>
+                    <span id="start_button"></span>
                 </div>
             </section>
             <section>
                 <br/>
                 <h1 id="challenge_number"></h1>
                 <h2 id="review"></h2>
-                <h3 id="current_score"></h3>
+                <h3 id="info"></h3>
                 <h2 id="final_score"></h2>
             </section>
             <section>
                 <br/>
-                <p id="gameplay"></p>
+                <p id="instruction"></p>
                 <div id="input_field">
                     <input type="text" placeholder="Type answer here" id="user_input">
                     <button id="input_submit" type="button">Submit</button>
