--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="Script/config.js" defer></script>
         <script src="Script/script.js" defer></script>
         <script src="Script/main.js" defer></script>
-        <title>Test</title>
+        <title>Writing Game</title>
     </head>
     <body>
         <header>
