--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <section>
-                <p><em>Choose a game mode, and play</em></p>
+                <p><em>Choose a game mode, and play ...</em></p>
                 <div id="content_type">
                     <label for="word"><u>Words</u></label>
                     <input type="radio" id="word" name="content_type" />
@@ -41,7 +41,7 @@
                 <br/>
                 <p id="instruction"></p>
                 <div id="input_field">
-                    <input type="text" placeholder="Type answer here" id="user_input">
+                    <input type="text" placeholder="Write the text here" id="user_input">
                     <button id="input_submit" type="button">Submit</button>
                 </div>
             </section>
