--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <section>
                 <h1>Welcome to this shitty game</h1>
                 <h3>Test your writing speed</h3>
+                <section id="last_score"></section>
             </section>
         </header>
         <main>
@@ -35,16 +36,19 @@
                 <h1 id="challenge_number"></h1>
                 <h2 id="review"></h2>
                 <h3 id="info"></h3>
-                <h2 id="final_score"></h2>
             </section>
             <section>
                 <br/>
                 <p id="instruction"></p>
                 <div id="input_field">
                     <input type="text" placeholder="Write the text here" id="user_input">
-                    <button id="input_submit" type="button">Submit</button>
+                    <button id="input_submit" type="button">Validate</button>
                 </div>
             </section>
         </main>
+        <section id="final_info">
+            <h2 id="final_score"></h2>
+            <h3 id="final_time"></h3>
+        </section>
     </body>
 </html>
