--- a/index.html
+++ b/index.html
@@ -13,42 +13,45 @@
             <section>
                 <h1>Welcome to this shitty game</h1>
                 <h3>Test your writing speed</h3>
-                <section id="last_score"></section>
+                <div id="last_score"></div>
             </section>
         </header>
         <main>
-            <section>
+            <section id="choice_section">
                 <p><em>Choose a game mode, and play ...</em></p>
                 <div id="content_type">
                     <label for="word"><u>Words</u></label>
                     <input type="radio" id="word" name="content_type" />
                     <label for="phrase"><u>Phrases</u></label>
                     <input type="radio" id="phrase" name="content_type" />
-                    <label for="content">Context</label>
-                    <select name="content" id="content">
+                    <label for="context">Context</label>
+                    <select name="context" id="context">
                         <option value="default">Not chosen</option>
                     </select>
-                    <span id="start_button"></span>
                 </div>
             </section>
-            <section>
-                <br/>
-                <h1 id="challenge_number"></h1>
-                <h2 id="review"></h2>
-                <h3 id="info"></h3>
-            </section>
-            <section>
-                <br/>
-                <p id="instruction"></p>
-                <div id="input_field">
-                    <input type="text" placeholder="Write the text here" id="user_input">
-                    <button id="input_submit" type="button">Validate</button>
+            <section id="gampelay_section" class="hide_target">
+                <div>
+                    <br/>
+                    <h1 id="challenge_number"></h1>
+                    <h2 id="review"></h2>
+                    <h3 id="info"></h3>
+                </div>
+                <div>
+                    <br/>
+                    <p id="instruction"></p>
+                    <div id="input_field">
+                        <input type="text" placeholder="Write the text here" id="user_input">
+                        <button id="input_submit" type="button">Validate</button>
+                    </div>
                 </div>
             </section>
+            
         </main>
         <section id="final_info">
             <h2 id="final_score"></h2>
             <h3 id="final_time"></h3>
+            <br/>
         </section>
     </body>
 </html>
